# Rune-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Rune-Engine.sln  premake5.lua
Orb-Editor/: CMakeLists.txt  cmake_install.cmake
Orb-Editor/assets/shaders/: m_Shader.glsl
Orb-Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Rune-Engine/: CMakeLists.txt  Rune-Engine.vcxproj  Rune-Engine.vcxproj.filters
Rune-Engine/src/: Rune.h  rune_pch.cpp  rune_pch.h
Rune-Engine/src/Rune/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Rune-Engine/src/Rune/Core/: Core.h  Log.cpp  Log.h  Timestep.h
Rune-Engine/src/Rune/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
Rune-Engine/src/Rune/Debug/: Instrumentator.h
Rune-Engine/src/Rune/Events/: Event.h  KeyEvent.h  MouseEvent.h
Rune-Engine/src/Rune/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Rune-Engine/src/Rune/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Rune-Engine/src/Rune/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Rune-Engine/src/Rune/Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Rune-Engine/src/Rune/Renderer/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
Rune-Engine/src/Rune/Renderer/Platform/OpenGL/Buffers/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Rune-Engine/src/Rune/Renderer/Platform/OpenGL/Shaders/: OpenGLShader.cpp  OpenGLShader.h
Rune-Engine/src/Rune/Renderer/Platform/OpenGL/Textures/: OpenGLTexture2D.cpp  OpenGLTexture2D.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/assets/shaders/: blueSquare.glsl  squareTexture.glsl
Sandbox/src/: SandboxApp.cpp
